--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		<div id="controls">
 			<label for="country">Country:</label>
 			<input id="country" type="text" name="country" value="Jamaica" />
-			<button id="lookup">Lookup</button>
+			<button id="lookup">Lookup</button><br>
+			<input id="check" type="checkbox" name="all" value="true"/>
 		</div>
 
 		<div id="result">
