--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<label for="country">Country:</label>
 			<input id="country" type="text" name="country" value="Jamaica" />
 			<button id="lookup">Lookup</button><br>
-			<input id="check" type="checkbox" name="all" value="true"/>
+		    All Countries: <input id="check" type="checkbox" name="all" value="true"/>
 		</div>
 
 		<div id="result">
